# Python-Package-Info

./: README.md  create_tables.py  database.py  main.py  models.py  pyproject.toml
static/: login.css  signup.css  style.css
templates/: compare.html  index.html  login.html  signup.html
